Added simple trend analysis function to API. Just showing off.

--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -18,11 +18,13 @@
           <dd>Check the health of the API.</dd>
         </dl>
         <dl>
-          <dt><a href="/api/twitter">/twitter</a></dt>
+          <dt><a href="/api/twitter">/api/twitter</a></dt>
           <dd>Twitter "firehose" of data from community members.</dd>
+          <dt><a href="/api/twitter/trends">/api/twitter/trends</a></dt>
+          <dd>See most-talked-about #hashtag, links, and commonly used words from the last 12 hours.</dd>
         </dl>
         <dl>
-          <dt><a href="/api/timestamps">/timestamps</a></dt>
+          <dt><a href="/api/timestamps">/api/timestamps</a></dt>
           <dd>(for debug): Timestamps updated once per ten minutes in a regular cron job.</dd>
         </dl>
         <footer>
