Refactored util file. Fixing up API.

--- a/dash/frontend/static/index.html
+++ b/dash/frontend/static/index.html
@@ -28,8 +28,8 @@
                   <tr><td><code>opinion</code></td><td>Filter by database's <u>_opinion</u> field.<br/>"<u>spammer</u>", "<u>staff</u>" etc.</td>
               </tbody>
           </table></dd>
-          <dt><a href="/api/1/person/set_opinion">/api/1/person/set_opinion</a></dt>
-          <dd><b>POST</b>-endpoint. Set the <u>_opinion</u> field on a user.
+          <dt style="display:none;"><a href="/api/1/person/set_opinion">/api/1/person/set_opinion</a></dt>
+          <dd style="display:none;"><b>POST</b>-endpoint. Set the <u>_opinion</u> field on a user.
           <table class="params table table-condensed">
               <thead><th colspan="2">Required Parameters:</th></thead>
               <tbody>
